--- a/UD3/06_modify_dom/table/index.html
+++ b/UD3/06_modify_dom/table/index.html
@@ -61,6 +61,7 @@
                     <th>ID</th>
                     <th>Name</th>
                     <th>Surname</th>
+                    //Añadida la columna Acciones a 
                     <th>Acciones</th>
                 </thead>
                 <tbody>
