--- a/UD3/09_ajax/index.html
+++ b/UD3/09_ajax/index.html
@@ -7,6 +7,17 @@
     <script src="./main.js"></script>
 </head>
 <body>
-    
+    <table>
+        <thead>
+            <td>ID</td>
+            <td>Name</td>
+            <td>Salary</td>
+            <td>Age</td>
+        </thead>
+        <tbody>
+            
+        </tbody>
+    </table>
+    <button onclick="addRow()">Muestra empleados</button>
 </body>
 </html>
