--- a/UD6/03_first_app/index.html
+++ b/UD6/03_first_app/index.html
@@ -4,22 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script> 
 </head>
 <body>
   <main>
     Sample vuejs application
 
-    <div id="app">
+    <div id="app"> 
       {{ message }}
     </div>
   </main>
 
   <script>
     let app = new Vue({
-      el: '#app',
-      data: {
-        message: 'Hello Vue!!'
+      el: '#app', //elemento con id=app sobre el que se monta la aplicacion. Vue controla los hijos de este elemento mediante nodos
+      data: { //datos que podemos manejar en la aplicación
+        message: 'Hello Vue!!' //Variable mensaje con su valor
       }
     })
   </script>
