--- a/UD6/04_show_data/index.html
+++ b/UD6/04_show_data/index.html
@@ -12,14 +12,22 @@
 
     <div id="app">
       {{ message }}
+      {{ nombre }}
+      {{ apellidos }}
+      {{ puntuacion }}
+      {{ puesto }}
     </div>
   </main>
 
-  <script>
+  <script> 
     let app = new Vue({
       el: '#app',
       data: {
-        message: 'Hello Vue!!'
+        message: 'Hello Vue!!',
+        nombre: 'Laura',
+        apellidos: 'Gil',
+        puntuacion: '100',
+        puesto: 'X'
       }
     })
   </script>
